fix: align with SPD AB#18144

--- a/interfaces/HO-Portal/src/global.scss
+++ b/interfaces/HO-Portal/src/global.scss
@@ -266,3 +266,14 @@ ion-icon {
     max-height: none;
   }
 }
+
+.registration-detais-link {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #000;
+
+  &:hover {
+    font-weight: bold;
+  }
+}
